test-fixtures/machine-dsl-tests/tests/compile_fail/typed_phase_has_no_as_str.rs
use meerkat_machine_kernels::generated::meerkat;

fn main() {
    let state = meerkat::initial_state();
    let _ = state.phase.as_str();
}
