test-fixtures/machine-dsl-tests/tests/compile_fail/typed_phase_has_no_as_str.stderr
error[E0599]: no method named `as_str` found for enum `meerkat_machine_kernels::generated::meerkat::Phase` in the current scope
 --> tests/compile_fail/typed_phase_has_no_as_str.rs:5:25
  |
5 |     let _ = state.phase.as_str();
  |                         ^^^^^^ method not found in `meerkat_machine_kernels::generated::meerkat::Phase`
